# owner-signal-sema-upgrade

./: ARCHITECTURE.md  Cargo.toml  README.md  flake.nix
examples/: canonical.nota
schema/: owner-signal-sema-upgrade.concept.schema
src/: lib.rs
tests/: round_trip.rs
